k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service
spec:
  selector:
    app: middleware-serviceone
  ports:
    - port: 80
      targetPort: 9090
  type: ClusterIP
